# PokeWorlds

./: .gitignore  README.md  README_dev.md  README_roadmap.md  demo.py  pyproject.toml  quick_tests.sh  sync_all.sh
.github/workflows/: docs.yaml
benchmark_tests/: tasks.csv
configs/: gameboy_vars.yaml  pokemon_red_vars.yaml  pokemon_vars.yaml  project_vars.yaml  rom_data_path_vars.yaml
demos/: charmander_enthusiast.py  emulator.py  environment.py  run_benchmark_zero_shot.py  vlm_agent.py  vlm_agent_test.py
dev/: create_first_state.py  dev_play.py  save_state.py
rom_data/pokemon/pokemon_brown/: PokemonBrown.gb  PokemonBrown.gb.state  PokemonBrown.sav
rom_data/pokemon/pokemon_crystal/: PokemonCrystal.gbc.rtc
rom_data/pokemon/pokemon_fools_gold/: PokemonFoolsGold.gbc  PokemonFoolsGold.gbc.rtc  PokemonFoolsGold.sav
rom_data/pokemon/pokemon_prism/: PokemonPrism.gbc.rtc  PokemonPrism.gbc.state  PokemonPrism.sav
rom_data/pokemon/pokemon_red/: PokemonRed.cheats  PokemonRed.gb.state  PokemonRed.sav
rom_data/pokemon/pokemon_starbeasts/: PokemonStarBeasts.gb  PokemonStarBeasts.sav
rom_data/pokemon_brown/captures/: battle_enemy_hp_text.npy  dialogue_choice_bottom_right.npy  map_bottom_right.npy  menu_top_right.npy  pokemon_stats_hp_text.npy
rom_data/pokemon_brown/states/: initial.state  pokedex.state
rom_data/pokemon_crystal/: PokemonCrystal.gbc.state
rom_data/pokemon_crystal/captures/: dialogue_bottom_right.npy  pc_top_left.npy  (+2 more)
src/poke_env/: __init__.py
src/poke_worlds/: __init__.py  setup_data.py
tests/: demo.py
tests/gameboy/: debug.py  dev.py
(+123 files in other folders)
