[project]
name = "poke-worlds"
version = "0.1.0"
description = "Emulation, state parsing, low-level control and Gym environments for Gen I and Gen II Pokémon games"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "bidict>=0.23.1",
    "click>=8.3.0",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pdoc>=16.0.0",
    "pyboy==2.4.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]
